source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@import '../../../themes/mixins/link';
@import '../../../themes/mixins/loading-spinner';

%progressLabelText {
  font-family: var(--font-medium);
  font-size: 12px;
  left: 60px;
  line-height: 24px;
  position: absolute;
  top: -10px;
  white-space: nowrap;
}

.component {
  .headerWrapper {
    align-items: flex-end;
    display: flex;
    line-height: 1.38;
    margin: 0 20px 10px;

    & > .title {
      color: var(--theme-staking-font-color-lighter);
      flex-grow: 1;
      font-family: var(--font-regular);
      font-size: 16px;
    }

    & > .actionButton {
      box-shadow: 0 1.5px 5px 0 var(--theme-staking-export-button-shadow-color);
      display: flex;
      height: auto;
      padding: 7px 12px;
      position: fixed;
      right: 20px;
      top: 144px;
      width: auto;

      &:focus {
        box-shadow: 0 1.5px 5px 0
          var(--theme-staking-export-button-shadow-color) !important;
      }

      &.actionButtonFaded {
        opacity: 0.5;

        &:hover {
          opacity: 1;
        }
      }

      .actionLabel {
        color: var(--theme-staking-learn-more-button-color);
        font-family: var(--font-medium);
        font-size: 14px;
        letter-spacing: normal;
        line-height: 1.36;
        margin-right: 12px;
      }

      .downloadIcon {
        height: 11px;
        object-fit: contain;
        width: 11px;

        path {
          fill: var(--theme-staking-learn-more-button-color);
        }
      }
    }
  }

  .noRewardsLabel {
    color: var(--theme-staking-font-color-lighter);
    flex-grow: 1;
    font-family: var(--font-regular);
    font-size: 16px;
    text-align: center;
  }

  :global {
    .LoadingSpinner_component {
      .LoadingSpinner_icon svg path {
        fill: var(--theme-loading-spinner-color) !important;
      }
    }
  }

  .loadingSpinnerWrapper {
    margin: auto;
  }

  .exportingSpinnerWrapper {
    :global {
      .LoadingSpinner_component {
        &.LoadingSpinner_small {
          height: 19px;
          margin: 0;
          width: 19px;
        }
      }
    }
  }

  table {
    border-style: hidden;
    user-select: text;
    width: 100%;

    thead {
      background: var(--theme-bordered-box-background-color);
      box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.2);
      display: block;
      margin: -20px -20px 0;
      padding: 0 20px;
      position: sticky;
      top: 0;
      z-index: 99;

      tr {
        border: 0;
        display: flex;
        justify-content: space-between;
        width: 100%;
      }
    }

    .tableHeader {
      &.fixedTableHeader {
        background-color: var(--theme-bordered-box-background-color);
        border-left: var(--theme-bordered-box-border);
        border-right: var(--theme-bordered-box-border);
        box-shadow: 0 10px 10px -10px var(--theme-staking-stake-pool-tooltip-shadow-color);
        height: 40px;
        left: 104px;
        padding: 0 10px;
        position: fixed;
        top: 204px;
        width: calc(100% - 124px);
        z-index: 99;

        tr {
          display: flex;
          padding: 0 10px;
        }
      }

      &.japaneseHeader {
        display: block;
      }
    }

    tbody {
      tr {
        display: flex;
        justify-content: space-between;
        width: 100%;

        &:hover {
          background-color: var(
            --theme-staking-stake-pools-search-clear-button-hover-background-color
          );
        }

        &.selected {
          background-color: var(
            --theme-staking-stake-pools-search-clear-button-background-color
          );
        }
      }

      &.japaneseHeader {
        display: block;

        td {
          &:first-child {
            min-width: 40px;
          }

          &:nth-child(2) {
            margin-left: -5px;
          }

          &:nth-child(3) {
            min-width: 30px;
          }

          &:nth-child(4) {
            min-width: 59.67px;
          }

          &:nth-child(5) {
            min-width: 49.81px;
          }

          &:nth-child(6) {
            min-width: 80px;
          }

          &:nth-child(7) {
            min-width: 70px;
          }

          &:nth-child(7) {
            min-width: 30px;
          }

          &:last-child {
            min-width: 40px;
          }
        }
      }
    }

    tr {
      border-bottom: 1px solid var(--theme-staking-table-border-color);
    }

    th {
      color: var(--theme-staking-font-color-regular);
      cursor: pointer;
      font-family: var(--font-semibold);
      font-size: 10px;
      font-weight: 600;
      line-height: 2;
      padding: 10px 0;
      text-align: left;
      text-transform: uppercase;
      user-select: none;
      vertical-align: middle;

      &:first-child,
      &:nth-child(4),
      &:nth-child(5),
      &:nth-child(6) {
        text-align: center;
      }

      &:nth-child(2) {
        max-width: 60px;
        min-width: 60px;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }

      &:nth-child(8) {
        margin-right: -12px;
        text-align: right;
      }

      &:last-child {
        text-align: right;
      }

      &:hover {
        & > .sortIcon:not(.sorted) {
          opacity: 0.5;
          visibility: visible;

          &.ascDefaultOrdering {
            & > svg {
              transform: rotateX(150deg);
            }
          }
        }
      }

      & > .sortIcon {
        margin-left: 3px;
        visibility: hidden;

        & > svg {
          height: 7.5px;
          width: 7px;

          & > path {
            fill: var(--theme-staking-font-color-regular);
          }
        }

        &.ascCurrentOrdering {
          & > svg {
            transform: rotateX(150deg);
          }
        }

        &.sorted {
          opacity: 1;
          visibility: visible;
        }
      }
    }

    td {
      color: var(--theme-staking-font-color-regular);
      font-family: var(--font-regular);
      font-size: 12px;
      line-height: 1.33;
      padding: 10px 0;
      position: relative;
      text-align: left;
      -webkit-user-select: none;
      -ms-user-select: none;
      user-select: none;

      &:first-child,
      &:nth-child(4),
      &:nth-child(5),
      &:nth-child(6) {
        text-align: center;
      }

      &:first-child {
        min-width: 37.58px;
      }

      &:nth-child(3) {
        min-width: 72.39px;
        text-align: center;
      }

      &:nth-child(4) {
        min-width: 64.92px;
      }

      &:nth-child(5) {
        min-width: 51.36px;
      }

      &:nth-child(6) {
        min-width: 105.44px;
      }

      &:nth-child(7) {
        min-width: 114.42px;
        text-align: right;
      }

      &:nth-child(8) {
        min-width: 47.48px;
        text-align: right;
      }

      &:last-child {
        min-width: 71.03px;
        text-align: center;
      }

      .ticker {
        color: var(--theme-staking-stake-pool-tooltip-link-color);
      }

      &:nth-child(2) {
        max-width: 60px;
        min-width: 60px;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;

        span {
          cursor: pointer;
          padding-left: 2px;
        }
      }

      p {
        -webkit-box-orient: vertical;
        display: -webkit-box;
        -webkit-line-clamp: 1;
        overflow: hidden;
        text-overflow: ellipsis;
        word-break: break-all;

        .stakePoolReference {
          font-family: var(--font-medium);
        }
      }

      .currentEpochProgressBar {
        height: 5px;
        margin: 5px 0;
        width: 50px;
      }

      .progressBarContainer {
        background-color: var(--theme-staking-progress-bar-background-color);
        border-radius: 5px;
        display: flex;
        height: 100%;
        position: relative;
        top: -1px;
        width: 100%;
      }

      .progress {
        border-radius: 5px;
        height: 100%;
        overflow: hidden;
        position: relative;

        &.green {
          background: var(--theme-staking-stake-pool-saturation-green-color);
        }

        &.orange {
          background: var(--theme-staking-stake-pool-saturation-orange-color);
        }

        &.red {
          background: var(--theme-staking-stake-pool-saturation-red-color);
        }

        &.yellow {
          background: var(--theme-staking-stake-pool-saturation-yellow-color);
        }
      }

      .overlapProgressLabel {
        color: var(--theme-staking-content-background-color);
        transform: translateX(calc(-100% - 8px));
        z-index: 98;
        @extend %progressLabelText;
      }

      .progressLabel {
        color: var(--theme-staking-font-color-regular);
        right: 8px;
        z-index: 97;
        @extend %progressLabelText;
      }

      .syncingProgress {
        position: absolute;
        right: 10px;
        top: 0;

        :global .LoadingSpinner_component.LoadingSpinner_medium {
          margin: 10px auto !important;
        }
      }

      .retiring {
        background-color: var(--theme-button-attention-background-color);
        border-radius: 3px;
        color: var(--theme-staking-content-background-color);
        font-family: var(--font-bold);
        font-size: 8px;
        font-weight: 500;
        padding: 2px 5px;
        text-transform: uppercase;
      }
    }
  }
}

.preloadingBlockWrapper {
  align-items: center;
  display: flex;
  flex: 1;
  justify-content: center;
  min-height: 44px;

  :global {
    .LoadingSpinner_component {
      margin: 0;
    }
  }
}

